--- a/package.json
+++ b/package.json
@@ -2043,7 +2043,7 @@
         "@jupyter-widgets/schema": "0.4.0",
         "@jupyterlab/coreutils": "5.1.17",
         "@jupyterlab/nbformat": "3.1.17",
-        "@jupyterlab/services": "6.1.17",
+        "@jupyterlab/services": "^7.0.6",
         "@lumino/widgets": "^1.28.0",
         "@nteract/messaging": "^7.0.0",
         "@vscode/extension-telemetry": "^0.7.7",
