--- a/.github/workflows/assignIssue.yml
+++ b/.github/workflows/assignIssue.yml
@@ -140,7 +140,7 @@ jobs:
               assignees: ['DonJayamanne']
             })
       - name: Wednesday (Don2)
-        if: steps.proceed.outputs.result == 1 && (steps.day.outputs.number == 3 && steps.hour.outputs.hour < 16)
+        if: steps.proceed.outputs.result == '1' && (steps.day.outputs.number == '3')
         uses: actions/github-script@v6.4.1
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
