--- a/.github/workflows/assignIssue.yml
+++ b/.github/workflows/assignIssue.yml
@@ -140,7 +140,19 @@ jobs:
               assignees: ['DonJayamanne']
             })
       - name: Wednesday (Don2)
-        if: steps.proceed.outputs.result == '1' && (steps.day.outputs.number == '3')
+        if: steps.proceed.outputs.result == '1'
+        uses: actions/github-script@v6.4.1
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            github.rest.issues.addAssignees({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              assignees: ['DonJayamanne']
+            })
+      - name: Wednesday (Don3)
+        if: steps.proceed.outputs.result == 1
         uses: actions/github-script@v6.4.1
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
