--- a/.github/workflows/assignIssue.yml
+++ b/.github/workflows/assignIssue.yml
@@ -152,7 +152,7 @@ jobs:
               assignees: ['DonJayamanne']
             })
       - name: Wednesday (Don3)
-        if: steps.proceed.outputs.result == 1
+        if: steps.day.outputs.number == 3
         uses: actions/github-script@v6.4.1
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
