--- a/.github/workflows/assignIssue.yml
+++ b/.github/workflows/assignIssue.yml
@@ -48,7 +48,7 @@ jobs:
       - name: MISC
         if: steps.proceed.outputs.result == '1'
         run: |
-          echo 'day::$(node -p -e "new Date().getDay()")'
+          echo 'day=$(node -p -e "new Date().getDay()")'
         shell: bash
       - name: MISC2
         run: |
@@ -58,13 +58,13 @@ jobs:
         if: steps.proceed.outputs.result == 1
         id: day
         run: |
-          echo 'number=$(node -p -e "new Date().getDay()")' >> $GITHUB_OUTPUT
+          echo "number=$(node -p -e 'new Date().getDay()'')"" >> $GITHUB_OUTPUT
         shell: bash
       - name: Hour of day
         if: steps.proceed.outputs.result == 1
         id: hour
         run: |
-          echo 'hour=$(node -p -e "new Date().getUTCHours()%24")' >> $GITHUB_OUTPUT
+          echo "hour=$(node -p -e 'new Date().getUTCHours()%24')"" >> $GITHUB_OUTPUT
         shell: bash
       - name: Week Number
         if: steps.proceed.outputs.result == 1
