--- a/.github/workflows/assignIssue.yml
+++ b/.github/workflows/assignIssue.yml
@@ -58,7 +58,7 @@ jobs:
         if: steps.proceed.outputs.result == 1
         id: day
         run: |
-          echo "number=$(node -p -e 'new Date().getDay()')"" >> $GITHUB_OUTPUT
+          echo "number=$(node -p -e 'new Date().getDay()')" >> $GITHUB_OUTPUT
         shell: bash
       - name: Hour of day
         if: steps.proceed.outputs.result == 1
